# BigBrother

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DS/notebook/: Automatic_Number_Plate_Recognition Test.py  Automatic_Number_Plate_Recognition VideoCapture.ipynb  Automatic_Number_Plate_Recognition VideoCapture.py  Automatic_Number_Plate_Recognition.ipynb  CNN.ipynb  main test.py  recognition.py
parking/carplates/: admin.py  apps.py  forms.py  models.py  recognition.py  urls.py  views.py
parking/carplates/migrations/: 0001_initial.py  0002_carplate_user.py
parking/carplates/templates/: carplate_manual.html  check-carplate.html
parking/parking/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
parking/parking/templates/: main.html
parking/parking_app/: admin.py  models.py  urls.py  views.py
parking/parking_app/migrations/: 0001_initial.py  0002_parkingprice_alter_parking_parked_time.py  0003_alter_parking_parked_time_alter_parking_unparked_at_and_more.py
parking/parking_app/templates/: add_parking.html
parking/users/: forms.py  models.py  urls.py  views.py
parking/users/migrations/: 0001_initial.py
parking/users/templates/users/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  signup.html
