[tool.poetry]
name = "parking"
version = "0.1.0"
description = ""
authors = ["oleksandr-study <oleksandr.study@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
