[tool.poetry]
name = "parking"
version = "0.1.0"
description = ""
authors = ["oleksandr-study <oleksandr.study@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
tensorflow = "^2.17.0"
keras = "^3.5.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
opencv-python = "^4.10.0.84"
numpy = "<2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
